--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,26 @@ textarea{
     .search-container {
         margin-top: 40px;
     }
+
+    .alert-custom {
+  color: #fff;
+  background-color: #dc3545;
+  padding: 8px 12px;
+  border-radius: 8px;
+  margin-top: 6px;
+  font-size: 14px;
+  position: relative;
+  animation: slideIn 0.3s ease-in-out;
+}
+
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(-5px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
